[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.1", features = ["tokio-runtime"] }
dotenvy = "0.15"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
